fix links/buttons not working inside of hotline, and spacing issues for p:last-child

--- a/blocks/hotline/hotline.css
+++ b/blocks/hotline/hotline.css
@@ -209,6 +209,18 @@
   margin-right: 0;
 }
 
+.hotline.alt .business-info p:last-child {
+display: block;
+}
+
+.hotline.alt .business-info p:last-child > a {
+  margin-right: 0;
+}
+
+.hotline.alt .business-info p:last-child > a:last-child {
+  margin-right: 0;
+}
+
 .hotline.filter details[open] summary::after {
   background: url('../../icons/chevron-up-orange.svg') center center no-repeat;
 }
